5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1708_3033.log
== TEST (2019-04-29 14:03:25) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100" )))
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:03) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if (x < -100) and (x > 100) amd (x = 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 4
    if (x < -100) and (x > 100) amd (x = 0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:10) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if (x < -100) and (x > 100) and (x = 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 4
    if (x < -100) and (x > 100) and (x = 0):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:33) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if (x < -100) and (x > 100) and (x = 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 4
    if (x < -100) and (x > 100) and (x = 0):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:50) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if(x < -100) and (x > 100) and (x = 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- ERROR:
File "XXXX", line 4
    if(x < -100) and (x > 100) and (x = 0):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:57) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if(x < -100) and (x > 100) and (x == 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:11:12) 
-- CODE:
x = (float(input( "digite um numero entre -100 e 100: " )))
t = - 1/x
p = 1/x
if(x < -100) and (x > 100) and (x == 0):
	print("entrada invalida")
elif(x >= -100) and (x < 0):
	print(round(t, 4))
elif(x > 0) and (x <= 100):
	print(round(p, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.146304
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
